
2004/07/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/text: added GWEN_Text_CheckSimilarity() which checks how equal
  two strings are (untested)


2004/07/28: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/misc.h: fixed a bug (concerning C++)
- base: added misc2.h
  This file now contains wrappers around a GWEN_LIST which allow typesafe
  use of a GWEN_LIST.
- base/misc2.h: added *List2_ForEach functions
- base/misc2.h: is now only a logical link to list2.h


2004/07/27: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/base64: fixed a bug in GWEN_Base64_Decode
- crypt/ossl/nettransportssl.c: fixed some bugs, added verbosity while
  testing AqHBCI's PIN/TAN support which extensively uses it


2004/07/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/netconnectionhttp: added defaultUrl. This is used when no URL is given
  in a request. This very much simplifies using this class.


2004-07-20   Christian Stimming <stimming@tuhh.de>

	* Makefile.am: Fix win32-cs target with wrong .lib filename.


2004/07/20: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- reverted latest changes to toplevel Makefile.am (contained ugly CR 
  characters. To Christian: Could you please reintroduce your  changes ? 
  Sorry for being rude but I needed Gwen to work and since I did not find a 
  ChangeLog entry I was unable to figure out the difference at a first
  glance...).
- started working on a C++ binding. This will only include function groups
  which are a bit complicated to use from C++ (like GWEN_WaitCallback).


===========================================================================
MARK: released gwenhywfar-0.9.13 (2004/07/05)
===========================================================================

